--- a/gb/18/2/12/n10136133.md
+++ b/gb/18/2/12/n10136133.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/havifh3963/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/havifh3963/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/havifh3963/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/havifh3963/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/havifh3963/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/havifh3963/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/havifh3963/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>奥克兰可负担住房不是梦 专家帮你支招</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年02月12日讯】（大纪元记者温妮报导）目前<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>租金在涨，房价居高不下，对于中低收入人群来说，要想在奥克兰拥有<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E4%BD%8F%E6%88%BF.md#1">住房</a>，似乎仍然遥不可及。不过，专家说了，你完全可以拥有<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E5%8F%AF%E8%B4%9F%E6%8B%85.md#1">可负担</a>住房。</p>
-<p>根据<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>市政府的<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E4%BD%8F%E6%88%BF.md#1">住房</a>协议，<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E5%8F%AF%E8%B4%9F%E6%8B%85.md#1">可负担</a>住房应该在65万元以下。根据Newshub新闻网提供的信息，如果你的最高预算只有65万的话，那么你可以考虑以下几种选择。</p>
+<p>【大纪元2018年02月12日讯】（大纪元记者温妮报导）目前<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>租金在涨，房价居高不下，对于中低收入人群来说，要想在奥克兰拥有<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BD%8F%E6%88%BF.md#1">住房</a>，似乎仍然遥不可及。不过，专家说了，你完全可以拥有<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%AF%E8%B4%9F%E6%8B%85.md#1">可负担</a>住房。</p>
+<p>根据<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>市政府的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BD%8F%E6%88%BF.md#1">住房</a>协议，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%AF%E8%B4%9F%E6%8B%85.md#1">可负担</a>住房应该在65万元以下。根据Newshub新闻网提供的信息，如果你的最高预算只有65万的话，那么你可以考虑以下几种选择。</p>
 <p><strong>把房子换个地方</strong></p>
 <p>“买块土地，找到一套没人要的房子，然后往卡车后面一放，运到你的土地上即可。”Relocatable House 公司总经理戴夫·威尔逊（Dave Wilson）说，这是在奥克兰拥有可负担住房的唯一办法。</p>
 <p>他的具体建议是：在奥克兰花45万元买块地，然后将一套简单的3居室住房迁过去 —— 这笔预算只要15万元。这样的话，你全部的花费将在65万元预算之内。</p>
@@ -21,8 +21,8 @@
 <p>岛上大约有100套住宅，没有多少选择余地。不过眼下你可以花36.5万购买一套带有800平米土地和大量果树的1居室度假小屋，也可以花57.5万购买一套带sleepout、可远眺科罗曼德半岛的3居室住宅。</p>
 <p>小岛不适合每天通勤上下班，因为每隔两三天才有一班轮渡往返奥克兰市中心，往返票价56元。如果乘皮艇至市中心，需要2-3个小时。不过，如果老板允许你每周远程工作数日的话，那么可以考虑。小岛上手机信号不大稳定，但互联网状况良好。</p>
 <p>Ray White地产公司经纪人史蒂芬·王（Stephen Wong，音译）负责管理那里80%的物业。他说，他有客户在奥克兰和Rakino 岛之间通勤上班。但他表示，通勤很难，岛上也有工作机会，当地的建筑工人已经被预定光了，两年内没有富余劳力。</p>
-<p><strong>购买租赁产权的<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E6%88%BF%E4%BA%A7.md#1">房产</a></strong></p>
-<p>租赁产权的<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E6%88%BF%E4%BA%A7.md#1">房产</a>相对便宜的多，但有一个规则：成本越低，风险越高。</p>
+<p><strong>购买租赁产权的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF%E4%BA%A7.md#1">房产</a></strong></p>
+<p>租赁产权的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF%E4%BA%A7.md#1">房产</a>相对便宜的多，但有一个规则：成本越低，风险越高。</p>
 <p>对于租赁产权的房产，你拥有土地上的建筑，但土地不属于你。你每年要向租赁产权持有者（通常是地方政府或教堂）缴纳土地租金。</p>
 <p>Ray White房地产公司Kohimarama中介唐娜·瓦特（Donna Watts）说，租赁产权可能不适合年轻人，因为租赁期可能是21年，在那之后没人知道土地租金会有什么变化。</p>
 <p>租赁产权的房产可以通过私人评估，评估完成之后，按土地价值的一定比例计算租金。瓦特表示，那是个未知数，所以银行不会提供贷款，这样的话，年轻人将很难融资。租赁产权更适合退休人员，他们不大在乎资本收益。</p>
@@ -37,7 +37,7 @@
 <p>如果彼此合作顺利的话，机会就很可观了。如果有40万的预算（一方），可以在Waterview购买一套体面的3房2浴住宅；如果有65万预算的话，可以花130万在Kingsland购买一套4房的漂亮别墅。</p>
 <p><strong>买套小房子</strong></p>
 <p>现在小住宅越来越流行。IQ集装箱住宅公司（IQ Container Homes）负责人布伦达·凯利（Brenda）Kelly）说，小空间并不意味着妥协。小住宅容易保暖，而且费用低。</p>
-<p>她说，<ahref="https://github.com/havifh3963/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>是世界上住宅规模最大的国家之一，平均住宅面积高达200平米，相比之下，英国只有76平米。她认为人们应该改变需要大房子的观念。</p>
+<p>她说，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>是世界上住宅规模最大的国家之一，平均住宅面积高达200平米，相比之下，英国只有76平米。她认为人们应该改变需要大房子的观念。</p>
 <p>她的公司生产预制集装箱活动房。你可以花16万购买一套45平米的2居室住房，也可以花24万购买一套90平米的3-4居室住房。</p>
 <p>她说，预制房保暖、便宜且环境友好。现在更多夫妇推迟要小孩，更多人独立居住，再加上婴儿潮一代缩小户型，小住宅的需求越来越高。</p>
 <p>她认为，人们完全可以在65万元预算内拥有住房。她自己就是个例子：她的房子很小，只有2居室，但足以满足她的需求；维护费用也低，每月水费只有2块钱，每月电费平均只有20块钱。</p>
@@ -48,47 +48,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/17/8/25/n9564316.md#1">专访特怀福德：工党将多方面改变规则</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/17/9/20/n9649424.md#1">租赁公寓大受欢迎 全国租金总体趋缓</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/17/10/26/n9772340.md#1">新政府宣誓就职 房市危机恐难解</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/17/11/1/n9792714.md#1">过去10年 新西兰房源减半 要价增半</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/17/11/9/n9820882.md#1">新届国会开会 推行“家庭礼包”计划优先</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/17/11/21/n9876204.md#1">纽出租房源普降 首都或陷租赁危机</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/17/12/12/n9948322.md#1">房地产协会调查：海外买家仅占3.8%</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/18/2/1/n10105392.md#1">绿党施压省府打压房市</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/18/2/10/n10132198.md#1">房价最难负担国家 澳洲排名世界第三</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/21/3/25/n12834072.md#1">新西兰政府住房新政：谁受益？谁担忧？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/25/n9564316.md#1">专访特怀福德：工党将多方面改变规则</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/9/20/n9649424.md#1">租赁公寓大受欢迎 全国租金总体趋缓</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/10/26/n9772340.md#1">新政府宣誓就职 房市危机恐难解</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/1/n9792714.md#1">过去10年 新西兰房源减半 要价增半</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/9/n9820882.md#1">新届国会开会 推行“家庭礼包”计划优先</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/21/n9876204.md#1">纽出租房源普降 首都或陷租赁危机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/12/n9948322.md#1">房地产协会调查：海外买家仅占3.8%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/2/1/n10105392.md#1">绿党施压省府打压房市</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/2/10/n10132198.md#1">房价最难负担国家 澳洲排名世界第三</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/3/25/n12834072.md#1">新西兰政府住房新政：谁受益？谁担忧？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/1/n9913343.md#1" target="_blank">淳子：闺秀文革自杀名单</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134744.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063507.md#1" target="_blank">是自焚还是骗局？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13574787.md#1">古代修炼文化留给人的启示</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605539.md#1">【财商天下】俄入侵乌克兰 北京被拉下水？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/26/n13606937.md#1">【马克时空】乌克兰抗俄 刺针、标枪、NLAW导弹立战功</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602624.md#1">【更新2.24】美确信普京欲推翻乌现政权</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/havifh3963/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/havifh3963/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/havifh3963/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/2/12/n10136133.htm">奥克兰可负担住房不是梦 专家帮你支招</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/2/12/n10136133.htm">奥克兰可负担住房不是梦 专家帮你支招</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/havifh3963/djy/blob/master/gb/18/2/12/n10136133.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/havifh3963/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/havifh3963/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/havifh3963/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/havifh3963/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/havifh3963/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/18/2/12/n10136133.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
